# report-etl-pipeline

./: .dockerignore  .gitignore  .gitpod.Dockerfile  .gitpod.yml  Dockerfile  Knowledge.md  README.md  TODO.md  dagster.prod.yaml  dagster.yaml  docker.compose.yaml  example.env  nginx.conf  pyproject.toml  tasks.py  workspace.yaml
.devcontainer/: Dockerfile  devcontainer.json
compose/: docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml
compose/nginx/: nginx.conf
dagster_home/: dagster.yaml
dagster_home_dev/: dagster.yaml
dagster_home_prod/: dagster.yaml
notebooks/: sandbox.ipynb
report_etl_pipeline/: __init__.py  assets.py  errors.py  io_managers.py  models.py  partitions.py  resources.py  types.py  utils.py
report_etl_pipeline/assets/: __init__.py  collected_reports.py  common.py  revised_reports.py
scripts/: investigate_sr.py  materialize_assets.py  start_server.sh
