[tool.poetry]
name = "report-etl-pipeline"
version = "0.1.0"
description = ""
authors = ["Kai Schlamp <kai.schlamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
adit-client = "^0.5.0"
dagster = "^1.6.11"
dagster-webserver = "^1.6.11"
pandas = "^2.0.3"
python = ">=3.11,<3.13"
radis-client = "^0.3.6"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
ipykernel = "^6.25.1"
ipython = "^8.14.0"
pyright = "^1.1.323"
ruff = "^0.4.8"

[tool.pyright]
ignore = ["**/*.ipynb"]
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = true

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "DJ"]

[tool.dagster]
module_name = "report_etl_pipeline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
